==> aws/amazon-freertos/vendors/espressif/boards/ports/wifi/iot_wifi.c <==
#include "iot_wifi.h"
#include "aws_wifi_config.h"
#include "string.h"
#include "esp_wifi.h"
#include "esp_log.h"
#include "esp_event.h"
#include "event_groups.h"
#include "lwip/dns.h"
#include "lwip/netdb.h"
#include "FreeRTOS_IP.h"
#include "FreeRTOS_Sockets.h"
#include "semphr.h"
#include "esp_smartconfig.h"
#include "nvs_flash.h"
#include "nvs.h"
#define WIFI_FLASH_NS     "WiFi"
#define MAX_WIFI_KEY_WIDTH         ( 5 )
#define MAX_SECURITY_MODE_LEN      ( 1 )
#define MAX_AP_CONNECTIONS         ( 4 )

BaseType_t WIFI_IsConnected( const WIFINetworkParams_t * pxNetworkParams )
{
    BaseType_t xRetVal = pdFALSE;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        if( ( wifi_conn_state == true) && 
            ( ( pxNetworkParams == NULL ) ||
              ( memcmp( pxNetworkParams->ucSSID, xConnectedAP.ucSSID, pxNetworkParams->ucSSIDLength ) == 0 ) ) )
        {
            xRetVal = pdTRUE;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_On( void )
{
    static bool event_loop_inited;
    esp_err_t ret;
    // Check if Event Loop is already initialized
    if (event_loop_inited == false) {
        ret = esp_event_loop_create_default();
        esp_netif_info = esp_netif_create_default_wifi_sta();
        esp_softap_netif_info = esp_netif_create_default_wifi_ap();
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to init event loop %d", __func__, ret);
            goto err;
        }
        esp_event_handler_instance_t instance_any_id;
        esp_event_handler_instance_t instance_got_ip;
        esp_event_handler_instance_register(WIFI_EVENT, ESP_EVENT_ANY_ID, &event_handler, NULL, &instance_any_id);
        esp_event_handler_instance_register(IP_EVENT, IP_EVENT_STA_GOT_IP, &event_handler, NULL, &instance_got_ip);
        event_loop_inited = true;
    }


    wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
    ret = esp_wifi_init(&cfg);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "%s: Failed to init wifi %d", __func__, ret);
        goto err;
    }

    ret = esp_wifi_set_storage(WIFI_STORAGE_RAM);
    if (ret != ESP_OK) {
        ESP_LOGE(TAG, "%s: Failed to set wifi storage %d", __func__, ret);
        goto err;
    }

    wifi_event_group = xEventGroupCreate();
    if (wifi_event_group == NULL) {
        ESP_LOGE(TAG, "%s: Failed to create eventgroup", __func__);
        goto err;
    }

    /* Create sync mutex */
    static StaticSemaphore_t xSemaphoreBuffer;
    if (xWiFiSem == NULL) {
        xWiFiSem = xSemaphoreCreateMutexStatic( &( xSemaphoreBuffer ) );
    }

    return eWiFiSuccess;
err:
    return eWiFiFailure;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    wifi_config_t wifi_config = { 0 };
    wifi_mode_t xCurMode;
    esp_err_t ret;
    WIFIReturnCode_t wifi_ret = eWiFiFailure;

    if( pxNetworkParams == NULL )
    {
        return wifi_ret;
    }

    if( !CHECK_VALID_SSID_LEN(pxNetworkParams->ucSSIDLength) )
    {
        return wifi_ret;
    }

    if( pxNetworkParams->xSecurity == eWiFiSecurityWEP )
    {
        return eWiFiNotSupported;
    }

    if( pxNetworkParams->xSecurity != eWiFiSecurityOpen && !CHECK_VALID_PASSPHRASE_LEN(pxNetworkParams->xPassword.xWPA.ucLength))
    {
        return wifi_ret;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        // Check if WiFi is already connected
        if (wifi_conn_state == true) {
            esp_err_t ret = esp_wifi_disconnect();
            if (ret == ESP_OK)
            {
                // Wait for wifi disconnected event
                xEventGroupWaitBits(wifi_event_group, DISCONNECTED_BIT, pdTRUE, pdFALSE, portMAX_DELAY);
            }
        }

        /* Security is wildcard, only ssid/password is required */
        strlcpy((char *) &wifi_config.sta.ssid, (char *) pxNetworkParams->ucSSID, pxNetworkParams->ucSSIDLength + 1);

        ret = esp_wifi_get_mode( &xCurMode );
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to get wifi mode %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
        	return eWiFiFailure;
        }

        if( xCurMode != WIFI_MODE_STA && xCurMode != WIFI_MODE_APSTA )
        {
            ret = esp_wifi_set_mode(WIFI_MODE_STA);
            if (ret != ESP_OK) {
        		ESP_LOGE(TAG, "%s: Failed to set wifi mode %d", __func__, ret);
                xSemaphoreGive( xWiFiSem );
                return wifi_ret;
            }
        }
        if (!wifi_started) {
            ret = esp_hal_wifi_start();
            if (ret != ESP_OK) {
                ESP_LOGE(TAG, "%s: Failed to start wifi %d", __func__, ret);
                xSemaphoreGive( xWiFiSem );
                return wifi_ret;
            }
        }

        if (pxNetworkParams->xSecurity != eWiFiSecurityOpen) {
            strlcpy((char *) &wifi_config.sta.password, pxNetworkParams->xPassword.xWPA.cPassphrase, pxNetworkParams->xPassword.xWPA.ucLength + 1);
        }

        ret = esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_config);
        /* Use a private function to reset the memory block instead of memset, so that compiler wont optimize away the function call. */
        prvMemzero( &wifi_config, sizeof( wifi_config_t ) );
        if (ret != ESP_OK) {
            ESP_LOGE(TAG, "%s: Failed to set wifi config %d", __func__, ret);
            xSemaphoreGive( xWiFiSem );
            return wifi_ret;
        }

        esp_wifi_connect();

        // Wait for wifi connected or disconnected event
        xEventGroupWaitBits(wifi_event_group, CONNECTED_BIT | DISCONNECTED_BIT, pdTRUE, pdFALSE, portMAX_DELAY);
        if (wifi_conn_state == true) {
            xConnectedAP = *pxNetworkParams;
            wifi_ret = eWiFiSuccess;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );

    }

    return wifi_ret;
}

WIFIReturnCode_t WIFI_Disconnect( void )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        // Check if WiFi is already disconnected
        if (wifi_conn_state == false) {
            xSemaphoreGive( xWiFiSem );
            return eWiFiSuccess;
        }

        esp_err_t ret = esp_wifi_disconnect();
        if (ret == ESP_OK)
        {
            // Wait for wifi disconnected event
            xEventGroupWaitBits(wifi_event_group, DISCONNECTED_BIT, pdTRUE, pdFALSE, portMAX_DELAY);
            xRetVal = eWiFiSuccess;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }
    return xRetVal;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;
    wifi_config_t wifi_config = { 0 };
    esp_err_t ret;
    wifi_mode_t xCurMode;
 
    if (pxBuffer == NULL || ucNumNetworks == 0) {
        return eWiFiFailure;
    }

    wifi_scan_config_t scanConf = {
        .ssid = NULL,
        .bssid = NULL,
        .channel = 0,
        .show_hidden = false
    };

    wifi_config.sta.scan_method = WIFI_ALL_CHANNEL_SCAN;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
    	ret = esp_wifi_get_mode( &xCurMode );
    	if (ret != ESP_OK) {
        		ESP_LOGE(TAG, "%s: Failed to set wifi mode %d", __func__, ret);
        		xSemaphoreGive( xWiFiSem );
        		return eWiFiFailure;
        }

    	if( xCurMode != WIFI_MODE_STA )
    	{

    		ret = esp_wifi_set_mode(WIFI_MODE_STA);
    		if (ret != ESP_OK) {
    			ESP_LOGE(TAG, "%s: Failed to set wifi mode %d", __func__, ret);
    			xSemaphoreGive( xWiFiSem );
    			return eWiFiFailure;
    		}

    		ret = esp_wifi_set_config(ESP_IF_WIFI_STA, &wifi_config);
    		if (ret != ESP_OK) {
    			ESP_LOGE(TAG, "%s: Failed to set wifi config %d", __func__, ret);
    			xSemaphoreGive( xWiFiSem );
    			return eWiFiFailure;
    		}
    	}

        if (!wifi_started) {
            ret = esp_hal_wifi_start();
            if (ret != ESP_OK) {
                ESP_LOGE(TAG, "%s: Failed to start wifi %d", __func__, ret);
                xSemaphoreGive( xWiFiSem );
                return eWiFiFailure;
            }
        }

        if ( wifi_conn_state == false && wifi_auth_failure == true )
        {
            /* It seems that WiFi needs explicit disassoc before scan request post
             * attempt to connect to invalid network name or SSID.
             */
            esp_wifi_disconnect();
            xEventGroupWaitBits(wifi_event_group, DISCONNECTED_BIT, pdTRUE, pdFALSE, 30);
        }


    	ret = esp_wifi_scan_start(&scanConf, true);
        if (ret == ESP_OK)
        {
            wifi_ap_record_t *ap_info = calloc(1, sizeof(wifi_ap_record_t) * ucNumNetworks);
            if (ap_info != NULL)
            {
                uint16_t num_aps = ucNumNetworks;
                esp_wifi_scan_get_ap_records(&num_aps, ap_info);
                for (int i = 0; i < num_aps; i++) {
                    pxBuffer[i].ucSSIDLength = strlcpy((char *)pxBuffer[i].ucSSID, (const char *)ap_info[i].ssid, wificonfigMAX_SSID_LEN + 1);
                    memcpy(pxBuffer[i].ucBSSID, ap_info[i].bssid, wificonfigMAX_BSSID_LEN);
                    pxBuffer[i].cRSSI = ap_info[i].rssi;
                    pxBuffer[i].ucChannel = ap_info[i].primary;
                    switch(ap_info[i].authmode)
                    {
                    case WIFI_AUTH_OPEN:
                    	pxBuffer[i].xSecurity = eWiFiSecurityOpen;
                    	break;
                    case WIFI_AUTH_WEP:
                    	pxBuffer[i].xSecurity =  eWiFiSecurityWEP;
                    	break;
                    case WIFI_AUTH_WPA_PSK:
                    	pxBuffer[i].xSecurity =  eWiFiSecurityWPA;
                    	break;
                    case WIFI_AUTH_WPA_WPA2_PSK:
                    case WIFI_AUTH_WPA2_PSK:
                    	pxBuffer[i].xSecurity =  eWiFiSecurityWPA2;
                    	break;
                    case WIFI_AUTH_WPA2_ENTERPRISE:
                    default:
                    	pxBuffer[i].xSecurity  = eWiFiSecurityNotSupported;
                    	break;
                    }
                }
                free(ap_info);
                xRetVal = eWiFiSuccess;
            }
            else
            {
                ESP_LOGE(TAG, "%s: Failed to alloc %lu bytes for WIFI provisionning", __func__, (long unsigned int)(sizeof(wifi_ap_record_t) * ucNumNetworks));
                ESP_LOGE(TAG, "%s: Current heap: %lu, min heap %lu", __func__, (long unsigned int)xPortGetFreeHeapSize(),(long unsigned int)xPortGetMinimumEverFreeHeapSize());
            }
        }

        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
    esp_err_t ret;
    WIFIReturnCode_t xRetVal;

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        switch (xDeviceMode) {
            case eWiFiModeStation:
                ret = esp_wifi_set_mode(WIFI_MODE_STA);
                xRetVal = (ret == ESP_OK) ? eWiFiSuccess : eWiFiFailure;
                break;
            case eWiFiModeAP:
                ret = esp_wifi_set_mode(WIFI_MODE_AP);
                xRetVal = (ret == ESP_OK) ? eWiFiSuccess : eWiFiFailure;
                break;
            default:
                xRetVal = eWiFiNotSupported;
                break;
        }
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }
    return xRetVal;
}

WIFIReturnCode_t WIFI_GetIPInfo( WIFIIPConfiguration_t * pxIPInfo )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;
    uint8_t *pucIPAddr;

    if (pxIPInfo == NULL) {
        return xRetVal;
    }

    memset( pxIPInfo, 0x00, sizeof( WIFIIPConfiguration_t ) );
    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
#if !AFR_ESP_LWIP
        pxIPInfo->xIPAddress.ulAddress[0] = FreeRTOS_GetIPAddress();
        pucIPAddr = ( uint8_t * ) ( &pxIPInfo->xIPAddress.ulAddress[0] );
        xRetVal = eWiFiSuccess;
        configPRINTF(("%s: local ip address is %d.%d.%d.%d\n",
                     __FUNCTION__,
                     pucIPAddr[0],
                     pucIPAddr[1],
                     pucIPAddr[2],
                     pucIPAddr[3]));
#else /* running lwip */
        esp_netif_ip_info_t ipInfo;
        int ret;

        ret = esp_netif_get_ip_info(esp_netif_info, &ipInfo);
        if (ret == ESP_OK)
        {
            xRetVal = eWiFiSuccess;
            pxIPInfo->xIPAddress.ulAddress[0] = ipInfo.ip.addr;
            pucIPAddr = ( uint8_t * ) ( &pxIPInfo->xIPAddress.ulAddress[0] );
            configPRINTF(("%s: local ip address is %d.%d.%d.%d\n",
                          __FUNCTION__,
                          pucIPAddr[0],
                          pucIPAddr[1],
                          pucIPAddr[2],
                          pucIPAddr[3]));
        }
        else
        {
            configPRINTF(("%s: esp_netif_get_ip_info_error:  %d",
                        __FUNCTION__,
                        ret));
        }
#endif
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }
    return xRetVal;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    WIFIReturnCode_t xRetVal;

    if (pucMac == NULL) {
        return eWiFiFailure;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
        wifi_mode_t mode;
        esp_err_t ret = esp_wifi_get_mode(&mode);
        if( ret == ESP_OK )
        {
            if( mode == WIFI_MODE_STA )
            {
                ret = esp_wifi_get_mac(WIFI_IF_STA, pucMac);
            }
            else if( mode == WIFI_MODE_AP )
            {
                ret = esp_wifi_get_mac(WIFI_IF_AP, pucMac);
            }
            else
            {
                ret = ESP_ERR_INVALID_ARG;
            }
        }
        xRetVal = (ret == ESP_OK) ? eWiFiSuccess : eWiFiFailure;
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}

WIFIReturnCode_t WIFI_GetHostIP( char * pcHost,
                                 uint8_t * pucIPAddr )
{
    WIFIReturnCode_t xRetVal = eWiFiFailure;

    if (pcHost == NULL || pucIPAddr == NULL) {
        return xRetVal;
    }

    /* Try to acquire the semaphore. */
    if( xSemaphoreTake( xWiFiSem, xSemaphoreWaitTicks ) == pdTRUE )
    {
#if AFR_ESP_LWIP
        struct hostent *he;
        struct in_addr **addr_list;
        he = gethostbyname(pcHost);
        if (he != NULL) {
            addr_list = (struct in_addr **)he->h_addr_list;
            memcpy(pucIPAddr, addr_list[0], sizeof(uint32_t));
            xRetVal = eWiFiSuccess;
        }
#else
        uint32_t IPAddr;
        IPAddr = FreeRTOS_gethostbyname( pcHost );
        if (IPAddr != 0UL)
        {
            *( ( uint32_t * ) pucIPAddr ) = IPAddr;
            xRetVal = eWiFiSuccess;
        }
#endif
        /* Return the semaphore. */
        xSemaphoreGive( xWiFiSem );
    }
    else
    {
        xRetVal = eWiFiTimeout;
    }

    return xRetVal;
}
