==> aws/amazon-freertos/vendors/infineon/boards/xmc4800_plus_optiga_trust_x/ports/wifi/iot_wifi.c <==
#include "FreeRTOS.h"
#include "iot_wifi.h"
#include "aws_wifi_config.h"
#include "limits.h"
#include "esp/esp.h"
#define CONNECT_BIT    (1 << 0)
#define DISCONNECT_BIT (1 << 1)

WIFIReturnCode_t WIFI_On( void )
{
  if (xIsWiFiInitialized == pdFALSE)
  {
    if (esp_init(esp_callback_func, 1) != espOK)
    {
      return eWiFiFailure;
    }

    xWiFiSemaphoreHandle = xSemaphoreCreateBinary();
    if (xWiFiSemaphoreHandle == NULL)
    {
      return eWiFiFailure;
    }
    xSemaphoreGive(xWiFiSemaphoreHandle);

    xIsWiFiInitialized = pdTRUE;
  }

  return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_ConnectAP( const WIFINetworkParams_t * const pxNetworkParams )
{
  BaseType_t xResult;
  uint32_t ulNotifiedValue;
  WIFIReturnCode_t status = eWiFiFailure;

  if ((pxNetworkParams == NULL) || (pxNetworkParams->ucSSIDLength == 0) 
      || ( pxNetworkParams->ucSSIDLength > wificonfigMAX_SSID_LEN ) )
  {
	return eWiFiFailure;
  }

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
    /* Store the handle of the calling task. */
    xTaskToNotify = xTaskGetCurrentTaskHandle();

    if (esp_sta_has_ip())
	{
	  if (esp_sta_quit(1) == espOK)
	  {
	      xResult = xTaskNotifyWait( pdFALSE,    /* Don't clear bits on entry. */
	                                 ULONG_MAX,        /* Clear all bits on exit. */
	                                 &ulNotifiedValue, /* Stores the notified value. */
									 xSemaphoreWaitTicks );

	      if (xResult == pdTRUE)
	      {
	    	if (ulNotifiedValue == DISCONNECT_BIT)
	    	{
	          status = eWiFiSuccess;
	        }
	      }
	  }
	}

    char pcSSID[pxNetworkParams->ucSSIDLength + 1];
    memcpy(pcSSID, pxNetworkParams->ucSSID, pxNetworkParams->ucSSIDLength);
    pcSSID[pxNetworkParams->ucSSIDLength] = '\0';

    char pcPassword[ wificonfigMAX_PASSPHRASE_LEN + 1];
    espr_t xReturn = espOK;

    memcpy(pcPassword, pxNetworkParams->xPassword.xWPA.cPassphrase, pxNetworkParams->xPassword.xWPA.ucLength);
    pcPassword[pxNetworkParams->xPassword.xWPA.ucLength] = '\0';

    strncpy(pcLastAttemptedSSID, (char *)pxNetworkParams->ucSSID, pxNetworkParams->ucSSIDLength + 1);

    xReturn = esp_sta_join(pcSSID, pcPassword, NULL, 0, 1);
    /* Use a private function to reset the memory block instead of memset, so that compiler wont optimize away the function call. */
    prvMemzero( pcPassword, sizeof( pcPassword ) );

    if (xReturn == espOK)
    {
      xResult = xTaskNotifyWait( pdFALSE,    /* Don't clear bits on entry. */
                                 ULONG_MAX,        /* Clear all bits on exit. */
                                 &ulNotifiedValue, /* Stores the notified value. */
								 xSemaphoreWaitTicks );

      if (xResult == pdTRUE)
      {
    	if (ulNotifiedValue == CONNECT_BIT)
    	{
          status = eWiFiSuccess;
        }
      }
    }

	/* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

WIFIReturnCode_t WIFI_Disconnect( void )
{
  BaseType_t xResult;
  uint32_t ulNotifiedValue;
  WIFIReturnCode_t status = eWiFiFailure;

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
	/* Store the handle of the calling task. */
	xTaskToNotify = xTaskGetCurrentTaskHandle();

	if (esp_sta_has_ip())
	{
      if (esp_sta_quit(1) == espOK)
      {
	      xResult = xTaskNotifyWait( pdFALSE,    /* Don't clear bits on entry. */
	                                 ULONG_MAX,        /* Clear all bits on exit. */
	                                 &ulNotifiedValue, /* Stores the notified value. */
									 xSemaphoreWaitTicks );

	      if (xResult == pdTRUE)
	      {
	    	if (ulNotifiedValue == DISCONNECT_BIT)
	    	{
	          status = eWiFiSuccess;
	        }
	      }
      }
	}
	else
	{
	  status = eWiFiSuccess;
	}
    /* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
  WIFIReturnCode_t status = eWiFiFailure;

  if ((pxBuffer == NULL) || (ucNumNetworks == 0))
  {
	return eWiFiFailure;
  }

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
    esp_ap_t APs[ESP_CFG_MAX_DETECTED_AP];
	size_t found_aps = 0;

	if (ucNumNetworks > ESP_CFG_MAX_DETECTED_AP)
	{
	  ucNumNetworks = ESP_CFG_MAX_DETECTED_AP;
	}

	if (esp_sta_list_ap(NULL, APs, ucNumNetworks, &found_aps, 1) == espOK)
    {
   	  for (int32_t i = 0; i < ucNumNetworks; ++i)
   	  {
   		memcpy(pxBuffer[i].ucSSID, APs[i].ssid, wificonfigMAX_SSID_LEN);
   	    memcpy(pxBuffer[i].ucBSSID, APs[i].mac.mac, wificonfigMAX_BSSID_LEN);
   	    pxBuffer[i].cRSSI = APs[i].rssi;
   	    pxBuffer[i].xSecurity = APs[i].ecn;
   	    pxBuffer[i].ucChannel = APs[i].ch;
   	  }

      status = eWiFiSuccess;
    }

    /* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
  WIFIReturnCode_t status = eWiFiFailure;

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
    esp_mode_t mode = aws_mode_conversion(xDeviceMode);
    if (mode == ESP_MODE_NOT_SUPPORTED)
    {
	  status = eWiFiNotSupported;
    }

    if (esp_set_wifi_mode(mode, 1) == espOK)
    {
      status = eWiFiSuccess;
    }

    /* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

WIFIReturnCode_t WIFI_GetIPInfo( WIFIIPConfiguration_t * xIPConfig )
{
  esp_ip_t gw;
  esp_ip_t nm;

  WIFIReturnCode_t status = eWiFiFailure;

  if (xIPConfig == NULL)
  {
	return eWiFiFailure;
  }

  memset(xIPConfig, 0, sizeof(WIFIIPConfiguration_t));

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
    if (esp_sta_getip((esp_ip_t *)&xIPConfig->xIPAddress.ulAddress[0], &gw, &nm, 0, 1) == espOK)
    {
      status = eWiFiSuccess;
    }

    /* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
  WIFIReturnCode_t status = eWiFiFailure;

  if (pucMac == NULL)
  {
	return eWiFiFailure;
  }

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
    if (esp_sta_getmac((esp_mac_t *)pucMac, 0, 1) == espOK)
    {
      status = eWiFiSuccess;
    }

    /* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

WIFIReturnCode_t WIFI_GetHostIP( char * pcHost,
                                 uint8_t * pucIPAddr )
{
  WIFIReturnCode_t status = eWiFiFailure;

  if ((pcHost == NULL) || (pucIPAddr == NULL))
  {
	return eWiFiFailure;
  }

  /* Acquire semaphore */
  if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
  {
    if (esp_dns_getbyhostname(pcHost, (esp_ip_t *)pucIPAddr, 1) == espOK)
    {
      status = eWiFiSuccess;
    }

    /* Release semaphore */
    xSemaphoreGive(xWiFiSemaphoreHandle);
  }
  else
  {
    status = eWiFiTimeout;
  }

  return status;
}

BaseType_t WIFI_IsConnected(const WIFINetworkParams_t * const pxNetworkParams)
{
	BaseType_t status = pdFALSE;

	/* Acquire semaphore */
	if (xSemaphoreTake(xWiFiSemaphoreHandle, xSemaphoreWaitTicks) == pdTRUE)
	{

		if (esp_sta_has_ip())
		{
			if (pxNetworkParams && pxNetworkParams->ucSSIDLength > 0)
			{
				if (pxNetworkParams->ucSSIDLength == strnlen(pcLastAttemptedSSID, wificonfigMAX_SSID_LEN)
					&& (0 == memcmp(pxNetworkParams->ucSSID, pcLastAttemptedSSID, pxNetworkParams->ucSSIDLength)))
				{
					status = pdTRUE;
				}
			}
			else
			{
				status = pdTRUE;
			}
		}

		/* Release semaphore */
		xSemaphoreGive(xWiFiSemaphoreHandle);
	}

	return status;
}
